Removed abstract links to modals from Cases page

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -38,7 +38,7 @@ cards:
       Number of people with at least one lab-confirmed positive COVID-19 test result, by specimen date. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:genCasesBySpecimenDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
     
     download:
@@ -113,7 +113,7 @@ cards:
       Number of people with at least one lab-confirmed positive COVID-19 test result, by date reported. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:genCasesByPublishDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -190,7 +190,7 @@ cards:
       Number of people with at least one lab-confirmed positive COVID-19 test result. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:genCases} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     options:
@@ -360,9 +360,8 @@ cards:
     abstract: >
       Number of people with at least one lab-confirmed positive or negative COVID-19 test result. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-      different dates between 15th June and 14th July for each nation.  
-      National data are not directly comparable - see the {indicator definition:genPeopleTested} 
-      for more information.
+      different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     options:
@@ -576,7 +575,7 @@ cards:
       Number of people with at least one lab-confirmed COVID-19 positive test result since the start of the pandemic, by age and sex. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:cumCasesByPublishDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -666,7 +665,7 @@ cards:
       of the pandemic per 100,000 population, by age and sex.  Initially only NHS and, in England, 
       PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:cumCasesByPublishDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
  
     tabs: 
@@ -929,7 +928,7 @@ cards:
       Number of people with at least one lab-confirmed positive COVID-19 test result since the start of the pandemic. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:cumCasesByPublishDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -1084,7 +1083,7 @@ cards:
       Number of people with at least one lab-confirmed positive COVID-19 test result, by date reported, by nation. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
       different dates between 15th June and 14th July for each nation.  National data are not directly comparable - 
-      see the {indicator definition:genCasesByPublishDate} for more information.
+      see the About tab for more information.
     # {{ EndDevOnlyBlock }}
 
     download:
